WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
249711
[IFC] Hanging trailing content should not be treated trimmable
https://bugs.webkit.org/show_bug.cgi?id=249711
Summary
[IFC] Hanging trailing content should not be treated trimmable
alan baradlay
Reported
2022-12-21 07:02:17 PST
ssia
Attachments
Patch
(3.93 KB, patch)
2022-12-21 07:10 PST
,
alan baradlay
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan baradlay
Comment 1
2022-12-21 07:10:36 PST
Created
attachment 464146
[details]
Patch
EWS
Comment 2
2022-12-21 14:12:03 PST
Committed
258216@main
(23d5b940828f): <
https://commits.webkit.org/258216@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 464146
[details]
.
Radar WebKit Bug Importer
Comment 3
2022-12-21 14:13:27 PST
<
rdar://problem/103613234
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug