[IFC] Hanging trailing content should not be treated trimmable https://bugs.webkit.org/show_bug.cgi?id=249711

Reviewed by Antti Koivisto.

If the trailing content on the line is hanging whitespace (pre-wrap), it should be treated as preserved (again, pre-wrap) and not trimmable (this likely has no visual impact though).

* Source/WebCore/layout/formattingContexts/inline/InlineLine.h:
(WebCore::Layout::Line::hangingTrailingWhitespaceWidth const): Deleted.
* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::tryPlacingFloatBox):
(WebCore::Layout::LineBuilder::handleInlineContent):
(WebCore::Layout::trimmableTrailingContentWidth): Deleted.

Canonical link: https://commits.webkit.org/258216@main